--- a/with_backend/src/main/resources/application.properties
+++ b/with_backend/src/main/resources/application.properties
@@ -4,3 +4,6 @@ spring.datasource.password=1234
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+mybatis.config-location=classpath:mybatis/model/modelConfig.xml
+mybatis.mapper-locations=classpath:mybatis/mappers/**/**.xml
