--- a/with_frontend/package.json
+++ b/with_frontend/package.json
@@ -23,6 +23,7 @@
     "react-native-reanimated": "^3.15.3",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
+    "react-native-vector-icons": "^10.2.0",
     "react-native-web": "^0.19.12",
     "zustand": "^5.0.0-rc.2"
   },
