--- a/with_frontend/package.json
+++ b/with_frontend/package.json
@@ -19,10 +19,12 @@
     "react": "18.2.0",
     "react-dom": "^18.2.0",
     "react-native": "0.74.5",
-    "react-native-gesture-handler": "^2.19.0",
+    "react-native-gesture-handler": "~2.16.1",
     "react-native-reanimated": "^3.15.3",
+    "react-native-responsive-dimensions": "^3.1.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
+    "react-native-vector-icons": "^10.2.0",
     "react-native-web": "^0.19.12",
     "zustand": "^5.0.0-rc.2"
   },
