:fire: Refactor: modify DTO files

--- a/with_backend/.gitignore
+++ b/with_backend/.gitignore
@@ -25,7 +25,7 @@ bin/
 out/
 !**/src/main/**/out/
 !**/src/test/**/out/
-src/main/java/com/newbins/configure/dbInfo.env
+.env
 
 ### NetBeans ###
 /nbproject/private/
