--- a/with_backend/src/main/resources/application.properties
+++ b/with_backend/src/main/resources/application.properties
@@ -5,6 +5,6 @@ spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
-# mybatis ??
+# mybatis
 mybatis.config-location=classpath:mybatis/model/modelConfig.xml
 mybatis.mapper-locations=classpath:mybatis/mappers/**/**.xml
