--- a/with_frontend/package.json
+++ b/with_frontend/package.json
@@ -19,9 +19,11 @@
     "expo-app-loading": "^2.1.1",
     "expo-font": "~12.0.10",
     "expo-status-bar": "~1.12.1",
+    "moment": "^2.30.1",
     "react": "18.2.0",
     "react-dom": "^18.2.0",
     "react-native": "0.74.5",
+    "react-native-date-ranges": "^2.5.0",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-modal-datetime-picker": "^18.0.0",
     "react-native-picker-select": "^9.3.1",
