:sparkles: Feat: create InsertMyPlaceScreen
이제 네이버맵 구현할 차례

--- a/with_frontend/app.json
+++ b/with_frontend/app.json
@@ -12,9 +12,11 @@
       "backgroundColor": "#ffffff"
     },
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.sunmoon.with"
     },
     "android": {
+      "package": "com.sunmoon.with",
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
@@ -24,7 +26,8 @@
       "favicon": "./assets/favicon.png"
     },
     "plugins": [
-      "expo-font"
+      "expo-font",
+      "expo-build-properties"
     ]
   }
 }
