:sparkles: Feat: InsertMyPlaceScreen back Connection code
잘 될지는 모르겠지만 변수명 알맞게 해서 보내질것같음.. 제발

NEXT) dayPlan 에 반영되게,,

--- a/with_frontend/package.json
+++ b/with_frontend/package.json
@@ -11,11 +11,15 @@
   "dependencies": {
     "@expo/metro-runtime": "~3.2.3",
     "@mj-studio/react-native-naver-map": "^2.2.0",
+    "@react-google-maps/api": "^2.19.3",
     "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-community/datetimepicker": "^8.2.0",
+    "@react-native-picker/picker": "^2.8.1",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/drawer": "^6.7.2",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
+    "axios": "^1.7.7",
     "expo": "~51.0.34",
     "expo-app-loading": "^2.1.1",
     "expo-build-properties": "~0.12.5",
@@ -27,6 +31,8 @@
     "react-native": "0.74.5",
     "react-native-date-ranges": "^2.5.0",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-google-places-autocomplete": "^2.5.6",
+    "react-native-maps": "^1.18.0",
     "react-native-modal-datetime-picker": "^18.0.0",
     "react-native-picker-select": "^9.3.1",
     "react-native-reanimated": "~3.10.1",
