Front feature detail chat screen (#22)
* :sparkles:  Feat: BoardCreateScreen

제목, 글종류, 모집인원, 날짜 시작일 종료일 가능,

그리고 day 까지 나오는거 가능

장소추가 눌러서 장소추가 눌렀을 때
그냥 페이지 이동 까지만

// 홈 (게시글목록) 에서 서치바에 검색한거 다시 홈으로 가져가게 , , 가져간거에 맞게
포스트리스트 나오게,,, , 최근검색에 진짜 최근에 검색한거 나오게,, 누르면 서치바에 입력되는것보다

바로 게시글 홈으로 날려주기,,

* :sparkles: Feat: SearchPlaceScreen

검색하면 거기에 맞는 데이터가 나와야함.. 지금그냥 더미데이터로 만들어놓음.

* :sparkles: Feat: create InsertMyPlaceScreen

이제 네이버맵 구현할 차례

* :sparkles: Feat: googleMap

오 구글맵

* :sparkles: Feat: InsertMyPlaceScreen back Connection code

잘 될지는 모르겠지만 변수명 알맞게 해서 보내질것같음.. 제발

NEXT) dayPlan 에 반영되게,,

* :Sparkles: Feat: structure MainBoardWriteScreen

.. 수정 큰거올것같아서 커밋.

* :sparkles: Feat: Map choiceButton insert

검색창에 뜨는거 눌러도 이제 장소 등록되게 함.

NEXT) 장소 추가할 떄마다 지도에 Day 마다 핀이 꽂히게 해야함.

* :sparkles: Feat: MainBoardWriteScreen map function

맵기능 추가.

지도 계속 바뀌어야함 .

* :sparkles: Feat: map Zoom in/out

줌 인아웃 넣었음

* :sparkles: Feat design

디자인 중간컴밋

* :sparkles: Feat: test

테스트 스와이프

최종 . . 게시판 작성 거의다 만듦. 

( 장소 삭제, 메모추가. ) 만 넣으면 됨.

--- a/with_frontend/app.json
+++ b/with_frontend/app.json
@@ -12,19 +12,24 @@
       "backgroundColor": "#ffffff"
     },
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.sunmoon.with"
     },
     "android": {
+      "package": "com.sunmoon.with",
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       }
     },
-    "web": {
-      "favicon": "./assets/favicon.png"
-    },
-    "plugins": [
-      "expo-font"
-    ]
+    "config": {
+      "googleMaps": {
+        "apiKey": "AIzaSyBALLdq4uzD_EoOdBdfK33n6Kt1sY06mdk"
+      },
+      "web": {
+        "favicon": "./assets/favicon.png"
+      },
+      "plugins": ["expo-font", "expo-build-properties"]
+    }
   }
 }
