--- a/with_frontend/package.json
+++ b/with_frontend/package.json
@@ -39,6 +39,7 @@
     "react-native-responsive-dimensions": "^3.1.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
+    "react-native-toast-message": "^2.2.1",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "^0.19.12",
     "zustand": "^5.0.0-rc.2"
