--- a/with_frontend/package.json
+++ b/with_frontend/package.json
@@ -32,6 +32,7 @@
     "react-native-date-ranges": "^2.5.0",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-google-places-autocomplete": "^2.5.6",
+    "react-native-image-picker": "^7.1.2",
     "react-native-maps": "^1.18.0",
     "react-native-modal-datetime-picker": "^18.0.0",
     "react-native-picker-select": "^9.3.1",
