--- a/with_frontend/package.json
+++ b/with_frontend/package.json
@@ -24,6 +24,7 @@
     "expo-app-loading": "^2.1.1",
     "expo-build-properties": "~0.12.5",
     "expo-font": "~12.0.10",
+    "expo-image-picker": "~15.0.7",
     "expo-status-bar": "~1.12.1",
     "moment": "^2.30.1",
     "react": "18.2.0",
@@ -36,6 +37,7 @@
     "react-native-maps": "^1.18.0",
     "react-native-modal-datetime-picker": "^18.0.0",
     "react-native-picker-select": "^9.3.1",
+    "react-native-progress": "^5.0.1",
     "react-native-ratings": "^8.1.0",
     "react-native-reanimated": "~3.10.1",
     "react-native-responsive-dimensions": "^3.1.1",
@@ -45,6 +47,7 @@
     "react-native-toast-message": "^2.2.1",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "^0.19.12",
+    "socket.io-client": "^4.8.0",
     "zustand": "^5.0.0-rc.2"
   },
   "devDependencies": {
