--- a/with_backend/src/main/resources/application.properties
+++ b/with_backend/src/main/resources/application.properties
@@ -8,3 +8,6 @@ spring.jpa.show-sql=true
 # mybatis
 mybatis.config-location=classpath:mybatis/model/modelConfig.xml
 mybatis.mapper-locations=classpath:mybatis/mappers/**/**.xml
+
+# api service key
+api.service.key=${API_SERVICE_KEY}
