--- a/with_frontend/package.json
+++ b/with_frontend/package.json
@@ -26,9 +26,13 @@
     "expo-font": "~12.0.10",
     "expo-image-picker": "~15.0.7",
     "expo-status-bar": "~1.12.1",
+    "i18next": "^23.15.1",
+    "i18next-browser-languagedetector": "^8.0.0",
+    "i18next-http-backend": "^2.6.2",
     "moment": "^2.30.1",
     "react": "18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^15.0.2",
     "react-native": "0.74.5",
     "react-native-date-ranges": "^2.5.0",
     "react-native-gesture-handler": "~2.16.1",
