--- a/with_frontend/package.json
+++ b/with_frontend/package.json
@@ -26,6 +26,7 @@
     "expo-font": "~12.0.10",
     "expo-image-picker": "~15.0.7",
     "expo-status-bar": "~1.12.1",
+    "firebase": "^10.14.0",
     "i18next": "^23.15.1",
     "i18next-browser-languagedetector": "^8.0.0",
     "i18next-http-backend": "^2.6.2",
