--- a/with_frontend/package.json
+++ b/with_frontend/package.json
@@ -24,10 +24,16 @@
     "expo-app-loading": "^2.1.1",
     "expo-build-properties": "~0.12.5",
     "expo-font": "~12.0.10",
+    "expo-image-picker": "~15.0.7",
     "expo-status-bar": "~1.12.1",
+    "firebase": "^10.14.0",
+    "i18next": "^23.15.1",
+    "i18next-browser-languagedetector": "^8.0.0",
+    "i18next-http-backend": "^2.6.2",
     "moment": "^2.30.1",
     "react": "18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^15.0.2",
     "react-native": "0.74.5",
     "react-native-date-ranges": "^2.5.0",
     "react-native-gesture-handler": "~2.16.1",
@@ -36,6 +42,7 @@
     "react-native-maps": "^1.18.0",
     "react-native-modal-datetime-picker": "^18.0.0",
     "react-native-picker-select": "^9.3.1",
+    "react-native-progress": "^5.0.1",
     "react-native-ratings": "^8.1.0",
     "react-native-reanimated": "~3.10.1",
     "react-native-responsive-dimensions": "^3.1.1",
@@ -45,6 +52,7 @@
     "react-native-toast-message": "^2.2.1",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "^0.19.12",
+    "socket.io-client": "^4.8.0",
     "zustand": "^5.0.0-rc.2"
   },
   "devDependencies": {
