--- a/with_frontend/package.json
+++ b/with_frontend/package.json
@@ -53,7 +53,8 @@
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "^0.19.12",
     "socket.io-client": "^4.8.0",
-    "zustand": "^5.0.0-rc.2"
+    "zustand": "^5.0.0-rc.2",
+    "expo-location": "~17.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
